--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "codacy-coverage": "^2.0.1",
     "coveralls": "^2.12.0",
     "cozydb": "0.1.7",
-    "cozy-proxy":"2.5.18",
-    "cozy-data-system": "2.5.14",
     "deprecated": "^0.0.1",
     "express": "4.13.3",
     "gulp-sourcemaps": "^2.4.1",
@@ -57,6 +55,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node_modules/.bin/nodemon server.js --watch server/ --watch server.js",
+    "test": "./node_modules/.bin/gulp",
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "repository": {
